--- a/templates/index.html
+++ b/templates/index.html
@@ -400,7 +400,7 @@
                     <i class="fas fa-map-marked-alt"></i>
                     Maps
                 </a>
-                <a href="register.html" class="nav-link">
+                <a href="#" class="nav-link">
                     <i class="fa fa-address-card"></i>
                     Register
                 </a>
